<resources>
    <string name="app_name">GiraGira</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="todo">TODO</string>
    <string name="eventos">Eventos</string>
    <string name="manutencao">Manutenção</string>
    <string name="bikes">Bikes</string>
    <string name="acessorios">Acessórios</string>
    <string name="locais">Locais</string>
    <string name="dicas">Dicas</string>
    <string name="doacao">Doação</string>
    <string name="usadas">Usadas</string>
    <string name="novas">Novas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batman">Batman</string>
    <string name="bicicleta">Bicicleta</string>
    <string name="nome">Nome</string>
    <string name="bicicletausada">BicicletaUsada</string>
</resources>