<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/IdToolbarBike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/baseline_keyboard_arrow_left"
            app:title="BIKES"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/idTabLayoutBikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idbikenew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idbikeusadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usadas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/idbikedoação"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doacao" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/ViewPagerBikes"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>